[package]
name            = "erdnuss-comms"
version         = "0.99.9"
authors         = ["James Munns <james@onevariable.com>"]
edition         = "2021"
readme          = "README.md"
repository      = "https://github.com/jamesmunns/erdnuss-pub"
description     = "A small RS-485 comms protocol"
license         = "MPL-2.0"
documentation   = "https://docs.rs/erdnuss-comms/"

[dependencies]
embassy-sync        = "0.5.0"
grounded            = "0.2"
heapless            = "0.7.0"
rand_core           = "0.6.4"
critical-section    = "1.1.2"

[dependencies.defmt]
version             = "0.3"
optional            = true

[dependencies.embassy-time]
version             = "0.2"
features            = ["defmt", "defmt-timestamp-uptime"]

[dependencies.futures]
version             = "0.3.29"
default-features    = false
features            = ["async-await"]

[dependencies.postcard]
version             = "1.0"
features            = ["experimental-derive", "heapless"]
optional            = true

[dependencies.postcard-rpc]
version             = "0.3"
optional            = true

[dependencies.serde]
version             = "1.0"
default-features    = false
features            = ["derive"]
optional            = true

[features]
default = [
    "postcard-rpc-helpers",
]

# Helpers for creating postcard-rpc formatted messages
# on the wire
postcard-rpc-helpers = [
    "dep:serde",
    "dep:postcard-rpc",
    "dep:postcard",
]

# Enable defmt logging
defmt-logging = [
    "dep:defmt",
]
