[package]
name            = "erdnuss-rp2040"
version         = "0.9.9"
authors         = ["James Munns <james@onevariable.com>"]
edition         = "2021"
readme          = "README.md"
repository      = "https://github.com/jamesmunns/erdnuss-pub"
description     = "A small RS-485 comms protocol impl for the RP2040"
license         = "MPL-2.0"
documentation   = "https://docs.rs/erdnuss-rp2040/"

[dependencies]
embassy-futures     = "0.1.1"

[dependencies.erdnuss-comms]
version             = "0.999"
path                = "../comms"

[dependencies.embassy-rp]
version             = "0.1.0"
features            = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"]

[dependencies.embassy-time]
version             = "0.3"
features            = ["defmt", "defmt-timestamp-uptime"]

[dependencies.rand_chacha]
version             = "0.3.1"
default-features    = false


[patch.crates-io.embassy-rp]
git = "https://github.com/embassy-rs/embassy"
rev = "b7bc31e51a6c6be658acc9f09bed41b94ea57623"

[patch.crates-io.embassy-time]
git = "https://github.com/embassy-rs/embassy"
rev = "b7bc31e51a6c6be658acc9f09bed41b94ea57623"

